[metadata]
name = nose2-django-plugin
version = 0.1
author = Brett Haydon
author-email = brett@haydon.id.au
summary = Nose2 plugin to run django tests through nose2 instead of the django test runner.
description-file = README.md
license = BSD
requires-dist = setuptools
classifier =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Testing
keywords =
    nose2
    django
    testing
[files]
packages = nose2django
