[global]
setup-hooks =
    nose2django.version_hook

[metadata]
name = nose2django
author = Brett Haydon
author-email = brett@haydon.id.au
url = https://github.com/bretth/nose2django
summary = Nose2 plugin to run django tests through nose2 instead of the django test runner.
description-file = 
    README.rst
    CHANGES.rst
        
license = BSD
requires-dist = setuptools
                nose2
classifier =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Framework :: Django
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development :: Testing
keywords =
    nose2
    django
    testing
[files]
packages = nose2django
extra_files =
            README.rst
            CHANGES.rst
            LICENSE.txt
